--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
       "@testing-library/jest-dom": "^5.11.6",
       "@testing-library/react": "^11.1.2",
       "@testing-library/user-event": "^12.2.2",
+      "antd": "^4.8.4",
       "axios": "^0.21.0",
+      "bootstrap": "^4.5.3",
       "materialize-css": "^1.0.0-rc.2",
       "react": "^17.0.1",
       "react-dom": "^17.0.1",
@@ -16,6 +18,7 @@
       "react-redux": "^7.2.2",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.0",
+      "reactstrap": "^8.7.1",
       "redux": "^4.0.5",
       "redux-devtools-extension": "^2.13.8",
       "redux-thunk": "^2.3.0",
