--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "antd": "^4.8.4",
       "axios": "^0.21.0",
       "bootstrap": "^4.5.3",
+      "faker": "^5.1.0",
       "materialize-css": "^1.0.0-rc.2",
       "react": "^17.0.1",
       "react-dom": "^17.0.1",
@@ -18,17 +19,20 @@
       "react-redux": "^7.2.2",
       "react-router-dom": "^5.2.0",
       "react-scripts": "4.0.0",
+      "react-slick": "^0.27.13",
       "reactstrap": "^8.7.1",
       "redux": "^4.0.5",
       "redux-devtools-extension": "^2.13.8",
       "redux-thunk": "^2.3.0",
+      "slick-carousel": "^1.8.1",
       "web-vitals": "^0.2.4"
    },
    "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "dev": "concurrently \"json-server --watch db.json --port 5000\" \"react-scripts start\""
    },
    "eslintConfig": {
       "extends": [
