--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
       "axios": "^0.21.0",
       "bootstrap": "^4.5.3",
       "faker": "^5.1.0",
+      "firebase": "^8.1.1",
+      "firebase-tools": "^7.16.2",
       "materialize-css": "^1.0.0-rc.2",
       "react": "^17.0.1",
       "react-dom": "^17.0.1",
