--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject",
-      "dev": "concurrently \"json-server --watch db.json --port 5000\" \"react-scripts start\""
+      "dev": "concurrently \"json-server --watch db.json --port 5000\" \"react-scripts start\"",
+      "server": "json-server --watch db.json --port 5000"
    },
    "eslintConfig": {
       "extends": [
