--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "react-lottie": "^1.2.3",
       "react-redux": "^7.2.2",
       "react-router-dom": "^5.2.0",
-      "react-scripts": "4.0.0",
+      "react-scripts": "^4.0.0",
       "react-slick": "^0.27.13",
       "reactstrap": "^8.7.1",
       "redux": "^4.0.5",
