--- a/package.json
+++ b/package.json
@@ -1,65 +1,63 @@
 {
-   "name": "nh_react",
-   "version": "0.1.0",
-   "private": true,
-   "dependencies": {
-      "@material-ui/core": "^4.11.0",
-      "@material-ui/icons": "^4.9.1",
-      "@material-ui/lab": "^4.0.0-alpha.57",
-      "@testing-library/jest-dom": "^5.11.6",
-      "@testing-library/react": "^11.1.2",
-      "@testing-library/user-event": "^12.2.2",
-      "antd": "^4.8.4",
-      "axios": "^0.21.0",
-      "bootstrap": "^4.5.3",
-      "faker": "^5.1.0",
-      "firebase": "^8.1.1",
-      "firebase-tools": "^7.16.2",
-      "materialize-css": "^1.0.0-rc.2",
-      "react": "^17.0.1",
-      "react-dom": "^17.0.1",
-      "react-lottie": "^1.2.3",
-      "react-redux": "^7.2.2",
-      "react-router-dom": "^5.2.0",
-      "react-scripts": "^4.0.0",
-      "react-slick": "^0.27.13",
-      "reactstrap": "^8.7.1",
-      "redux": "^4.0.5",
-      "redux-devtools-extension": "^2.13.8",
-      "redux-thunk": "^2.3.0",
-      "shortid": "^2.2.16",
-      "slick-carousel": "^1.8.1",
-      "web-vitals": "^0.2.4"
-   },
-   "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject",
-      "dev": "concurrently \"json-server --watch db.json  --port 5000\" \"react-scripts start\"",
-      "server": "json-server --watch db.json --port 5000 --host 192.168.0.102",
-      "deploy": "npm run build && firebase deploy --only hosting"
-   },
-   "eslintConfig": {
-      "extends": [
-         "react-app",
-         "react-app/jest"
-      ]
-   },
-   "browserslist": {
-      "production": [
-         ">0.2%",
-         "not dead",
-         "not op_mini all"
-      ],
-      "development": [
-         "last 1 chrome version",
-         "last 1 firefox version",
-         "last 1 safari version"
-      ]
-   },
-   "devDependencies": {
-      "concurrently": "^5.3.0",
-      "json-server": "^0.16.3"
-   }
+  "name": "nh_react",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "faker": "^5.1.0",
+    "firebase": "^8.1.1",
+    "firebase-tools": "^13.1.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-lottie": "^1.2.3",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.27.13",
+    "reactstrap": "^8.7.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.16",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^0.2.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"json-server --watch db.json  --port 3002\" \"react-scripts start\"",
+    "server": "json-server --watch db.json --port 3002 --host 192.168.0.102",
+    "deploy": "npm run build && firebase deploy --only hosting"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "json-server": "^1.0.0-alpha.23"
+  }
 }
