--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.53",
+    "@types/react-dom": "^18.2.18",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "faker": "^5.1.0",
@@ -28,6 +32,7 @@
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
+    "typescript": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
