--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,7 +12,10 @@ jobs:
     environment: deploy
     steps:
       - uses: actions/checkout@v2
-      - run: yarn build
+      - name: install
+        run: yarn add
+      - name: build
+        run: yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
