--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install
-        run: yarn add
+        run: yarn install
       - name: build
         run: yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
