--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,7 +12,11 @@ jobs:
     environment: deploy
     steps:
       - uses: actions/checkout@v2
-      - name: Generate env variables
+
+      - name: yarn install
+        run: yarn install    
+        
+      - name: yarn build
         env:
           REACT_APP_IS_CD: ${{ secrets.REACT_APP_IS_CD }}
           REACT_APP_FINTECH_APS_NO: ${{ secrets.REACT_APP_FINTECH_APS_NO }}
@@ -26,11 +30,6 @@ jobs:
           REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
           REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
           REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
-      
-      - name: install
-        run: yarn install
-        
-      - name: build
         run: yarn build
         
       - uses: FirebaseExtended/action-hosting-deploy@v0
