--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,7 +9,22 @@ name: Deploy to Firebase Hosting on merge
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment: deploy
+
+    env:
+      CI: false
+      REACT_APP_IS_CD: ${{ secrets.REACT_APP_IS_CD }}
+      REACT_APP_FINTECH_APS_NO: ${{ secrets.REACT_APP_FINTECH_APS_NO }}
+      REACT_APP_API_SVC_CD: ${{ secrets.REACT_APP_API_SVC_CD }}
+      REACT_APP_ACCESS_TOKEN: ${{ secrets.REACT_APP_ACCESS_TOKEN }}
+      REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
+      REACT_APP_AUTH_DOMAIN: ${{ secrets.REACT_APP_AUTH_DOMAIN }}
+      REACT_APP_DATABASE_URL: ${{ secrets.REACT_APP_DATABASE_URL }}
+      REACT_APP_PROJECT_ID: ${{ secrets.REACT_APP_PROJECT_ID }}
+      REACT_APP_STORAGE_BUCKET: ${{ secrets.REACT_APP_STORAGE_BUCKET }}
+      REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
+      REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
+      REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
+    
     steps:
       - uses: actions/checkout@v2
 
@@ -17,19 +32,6 @@ jobs:
         run: yarn install    
         
       - name: yarn build
-        env:
-          REACT_APP_IS_CD: ${{ secrets.REACT_APP_IS_CD }}
-          REACT_APP_FINTECH_APS_NO: ${{ secrets.REACT_APP_FINTECH_APS_NO }}
-          REACT_APP_API_SVC_CD: ${{ secrets.REACT_APP_API_SVC_CD }}
-          REACT_APP_ACCESS_TOKEN: ${{ secrets.REACT_APP_ACCESS_TOKEN }}
-          REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
-          REACT_APP_AUTH_DOMAIN: ${{ secrets.REACT_APP_AUTH_DOMAIN }}
-          REACT_APP_DATABASE_URL: ${{ secrets.REACT_APP_DATABASE_URL }}
-          REACT_APP_PROJECT_ID: ${{ secrets.REACT_APP_PROJECT_ID }}
-          REACT_APP_STORAGE_BUCKET: ${{ secrets.REACT_APP_STORAGE_BUCKET }}
-          REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
-          REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
-          REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
         run: yarn build
         
       - uses: FirebaseExtended/action-hosting-deploy@v0
