--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,22 +8,10 @@ name: Deploy to Firebase Hosting on merge
       - main
 jobs:
   build_and_deploy:
+    name: Build & Deploy
     runs-on: ubuntu-latest
 
-    env:
-      CI: false
-      REACT_APP_IS_CD: ${{ secrets.REACT_APP_IS_CD }}
-      REACT_APP_FINTECH_APS_NO: ${{ secrets.REACT_APP_FINTECH_APS_NO }}
-      REACT_APP_API_SVC_CD: ${{ secrets.REACT_APP_API_SVC_CD }}
-      REACT_APP_ACCESS_TOKEN: ${{ secrets.REACT_APP_ACCESS_TOKEN }}
-      REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
-      REACT_APP_AUTH_DOMAIN: ${{ secrets.REACT_APP_AUTH_DOMAIN }}
-      REACT_APP_DATABASE_URL: ${{ secrets.REACT_APP_DATABASE_URL }}
-      REACT_APP_PROJECT_ID: ${{ secrets.REACT_APP_PROJECT_ID }}
-      REACT_APP_STORAGE_BUCKET: ${{ secrets.REACT_APP_STORAGE_BUCKET }}
-      REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
-      REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
-      REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
+    environment: deploy
     
     steps:
       - uses: actions/checkout@v2
@@ -33,7 +21,21 @@ jobs:
         
       - name: yarn build
         run: yarn build
-        
+        env:
+          CI: false
+          REACT_APP_IS_CD: ${{ secrets.REACT_APP_IS_CD }}
+          REACT_APP_FINTECH_APS_NO: ${{ secrets.REACT_APP_FINTECH_APS_NO }}
+          REACT_APP_API_SVC_CD: ${{ secrets.REACT_APP_API_SVC_CD }}
+          REACT_APP_ACCESS_TOKEN: ${{ secrets.REACT_APP_ACCESS_TOKEN }}
+          REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
+          REACT_APP_AUTH_DOMAIN: ${{ secrets.REACT_APP_AUTH_DOMAIN }}
+          REACT_APP_DATABASE_URL: ${{ secrets.REACT_APP_DATABASE_URL }}
+          REACT_APP_PROJECT_ID: ${{ secrets.REACT_APP_PROJECT_ID }}
+          REACT_APP_STORAGE_BUCKET: ${{ secrets.REACT_APP_STORAGE_BUCKET }}
+          REACT_APP_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}
+          REACT_APP_APP_ID: ${{ secrets.REACT_APP_APP_ID }}
+          REACT_APP_MEASUREMENT_ID: ${{ secrets.REACT_APP_MEASUREMENT_ID }}
+          
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
